--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "web build by react",
   "main": "app/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build"
   },
   "keywords": [
     "webpack",
@@ -15,9 +17,12 @@
   "license": "MIT",
   "dependencies": {
     "react": "^16.0.0",
+    "react-app-rewire-less": "^2.0.7",
     "react-dom": "^16.0.0",
     "react-hot-loader": "^3.1.1",
-    "react-router": "^4.2.0"
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^4.0.8"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.6",
