--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
   "license": "MIT",
   "dependencies": {
     "react": "^16.0.0",
-    "react-app-rewire-less": "^2.0.7",
+    "react-app-rewire-less": "^2.1.0",
     "react-dom": "^16.0.0",
     "react-hot-loader": "^3.1.1",
+    "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-router-redux": "^4.0.8"
+    "react-router-redux": "^4.0.8",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.6",
