--- a/package.json
+++ b/package.json
@@ -16,14 +16,21 @@
   "author": "mahai",
   "license": "MIT",
   "dependencies": {
+    "antd": "^2.13.10",
+    "axios": "^0.17.1",
+    "highlight": "^0.2.4",
+    "highlight.js": "^9.12.0",
+    "lodash": "^4.17.4",
+    "marked": "^0.3.6",
     "react": "^16.0.0",
     "react-app-rewire-less": "^2.1.0",
+    "react-app-rewired": "^1.3.5",
     "react-dom": "^16.0.0",
-    "react-hot-loader": "^3.1.1",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
+    "react-scripts": "^1.0.17",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
@@ -41,8 +48,9 @@
     "json-loader": "^0.5.7",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "react-hot-loader": "^3.1.3",
     "style-loader": "^0.19.0",
     "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.3"
+    "webpack-dev-server": "^2.9.4"
   }
 }
